# OpenGlRendu

./: CMakeLists.txt  README.md
Shaders/: blinn_phong.fs  blinn_phong.vs  colors.fs  curveShader.fs
includes/glad/: glad.h
includes/stb/: stb_image.cpp
src/: HelloWindow.cpp  HelloWindow.h  Shader.cpp  Shader.h  camera.h  glad.c
src/Data/: BezierCurve.cpp  BezierCurve.h  BezierSurface.h  Cube.h  Mesh.cpp  Mesh.h  Model.h  TriangleMesh.cpp  TriangleMesh.h
src/OpenGl/: Drawable.cpp  Drawable.h  Program.cpp  Program.h
src/tools/: Bone.cpp  Bone.h  Lights.h  Shader.h  Skin.cpp  Skin.h  Vertex.cpp  Vertex.h  camera.cpp  camera.h  glad.c
src/utils/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Lights.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
